--- a/pages/4-walk.html
+++ b/pages/4-walk.html
@@ -35,19 +35,17 @@
         <audio autoplay src="../video/4-walk.mp3"></audio>
       </div>
 
+       <div class="vid">
+        <a href="../pages/5-athlete.html" class="butt">Sports?</a>
+        <a href="../pages/5-artist.html" class="butt">Drawing?</a>
+        <a href="../pages/5-chef.html" class="butt">Cooking?</a>
+        <a href="../pages/5-musician.html" class="butt">Music?</a>
+      </div>
       <div class="vid">
-        <li><a href="../pages/5-athlete.html" class="butt">Sports?</a></li>
-        <li><a href="../pages/5-artist.html" class="butt">Drawing?</a></li>
-        <li><a href="../pages/5-chef.html" class="butt">Cooking?</a></li>
-        <li>
-          <a href="../pages/5-actor.html" class="butt"
-            >Talking or performing in plays?</a
-          >
-        </li>
-        <li><a href="../pages/5-musician.html" class="butt">Music?</a></li>
-        <li>
-          <a href="../pages/5-nothing.html" class="butt">Doing nothing?</a>
-        </li>
+        <a href="../pages/5-actor.html" class="butt"
+          >Talking or performing in plays?</a
+        >
+        <a href="../pages/5-nothing.html" class="butt">Doing nothing?</a>
       </div>
     </div>
     <!-------footer start----->
